--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Pictures#index</h1>
-<p>Find me in app/views/pictures/index.html.erb</p>
+<h2></h2>
+<table>
+    <tr>
+        <th>Content</th>
+        <th>Image</th>
+    </tr>
+    
+    <% @pictures.each do |picturee| %>
+    
+    <tr>
+        <td><%= picture.content %></td>
+        <td><%= picture.image %></td>
+    </tr>
+    <% end %>
+</table>
