--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Pictures#show</h1>
-<p>Find me in app/views/pictures/show.html.erb</p>
+<h2>Picture詳細画面</h2>
+
+<p>Content:<%= @picture.content %></p>
+<p>Image:<%= @picture.image %></p>
