--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -5,13 +5,14 @@
         <th>Image</th>
     </tr>
     
-    <% @pictures.each do |picturee| %>
+    <% @pictures.each do |picture| %>
     
     <tr>
         <td><%= picture.content %></td>
         <td><%= picture.image %></td>
-        <td><%= link_to '詳細',picture_path(picture.id) %></td>
-        <td><%= link_to '編集',edit_picture_path(picture.id) %></td>
+        <td><%= link_to 'pictureを詳細する',picture_path(picture.id) %></td>
+        <td><%= link_to 'pictureを編集する',edit_picture_path(picture.id) %></td>
+        <td><%= link_to 'pictureを削除する',picture_path(picture.id),data: {turbo_method: :delete,turbo_confirm: "Are you sure?"} %></td>
     </tr>
     <% end %>
 </table>
