Implementation of image posting function

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,4 @@
-<h2></h2>
+<h2>Picture一覧画面</h2>
 <table>
     <tr>
         <th>Content</th>
@@ -16,3 +16,4 @@
     </tr>
     <% end %>
 </table>
+<%= link_to 'Pictureを投稿する',new_picture_path %>
