--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,7 +1,7 @@
 <h2>以下の内容で、登録します</h2>
 
 <%= form_with(model: @picture,local: true,, data: { turbo: false }) do |form| %>
-
+    <%= image_tacg(@picture.image.url) if @picture.image && @picture.image.url %>
     <%= form.hidden_field :content %>
     <%= form.hidden_field :image_cache %>
     
