--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,4 +1,4 @@
 <h2>Picture詳細画面</h2>
 
 <p>Content:<%= @picture.content %></p>
-<p>Image:<%= @picture.image %></p>
+<p>Image:<%= image_tag @picture.image.url %></p>
