--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -19,6 +19,8 @@
 <div class='picture_image'>
     <%= form.label :image %>
     <%= form.file_field :image %>
+    <%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %>
+    <%= form.hidden_field :image_cache %>
 </div>
 
 <div>
