--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,9 +1,12 @@
 <h2>以下の内容で、登録します</h2>
 
-<%= form_with(model: @picture,local: true,, data: { turbo: false }) do |form| %>
-    <%= image_tacg(@picture.image.url) if @picture.image && @picture.image.url %>
+<%= form_with(model: @picture,local: true,data: { turbo: false }) do |form| %>
+    
     <%= form.hidden_field :content %>
     <%= form.hidden_field :image_cache %>
+    
+    <p>Content:<%= @picture.content %></p>
+    <p><%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %></p>
     
     <%= form.submit '登録する' %>
     <%= form.submit '戻る',name: 'back' %>
