--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Sign up</h1>
 
-<% if @user.errors.any?_ %>
-    <div id='error*_explanation'>
+<% if @user.errors.any? %>
+    <div id='error_explanation'>
         <h2><%= pluralize(@user.errors.count,"error") %>prohibited this <%= @user.name %>from being swaved:</h2>
         <ul>
             <% @user.errors.full_messages.each do |msg| %>
@@ -11,16 +11,20 @@
     </div>
 <% end %>
 
-<%= form_with(model: @user,local: true,, data: { turbo: false }) do |f| %>
+<%= form_with(model: @user,local: true, data: { turbo: false }) do |f| %>
 
 <%= f.label :name %>
 <%= f.text_field :name %>
 
 <%= f.label :email %>
-<%= f:email_field :email %>
+<%= f.email_field :email %>
 
 <%= f.label :password %>
 <%= f.password_field :password %>
+
+<%= f.label :password_confirmation %>
+<%= f.password_field :password_confirmation %>
+
 
 <%= f.submit 'Create my account' %>
 
