--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,3 +2,11 @@
 
 <p>Content:<%= @picture.content %></p>
 <p>Image:<%= image_tag @picture.image.url %></p>
+
+<% unless @picture.user_id == current_user.id %>
+    <% if @favorite.present? %>
+        <%= link_to 'お気に入り解除する',favorite_path(id: @favorite.id),data: {turbo_method: :delete,turbo_confirm: "Are you sure?"} %>
+    <% else %>
+        <%= link_to 'お気に入りする',favorites_path(picture_id: @picture.id),data: {turbo_method: :post} %>
+    <% end %>
+<% end %>
