--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,6 +25,9 @@
 <%= f.label :password_confirmation %>
 <%= f.password_field :password_confirmation %>
 
+<%= f.label :avatar %>
+<%= f.file_field :avatar %>
+
 
 <%= f.submit 'Create my account' %>
 
