Implementation of profile image editing function

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,5 @@
 
 <p>email:<%= @user.email %></p>
 <p>avatar: <%= image_tag @user.avatar.url %></p>
+
+<%= link_to 'Profileを編集する',edit_user_path(@user.id) %>
