--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,4 +3,6 @@
 <p>email:<%= @user.email %></p>
 <p>avatar: <%= image_tag @user.avatar.url %></p>
 
-<%= link_to 'Profileを編集する',edit_user_path(@user.id) %>
+<% if current_user.id == @user.id %>
+   <%= link_to 'Profileを編集する',edit_user_path(@user.id) %>
+<% end %>
